# ollama-shim

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
src/: config.rs  main.rs  proxy.rs  state.rs
