[package]
name = "ollama-api-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3", features = ["trace"] }
bytes = "1.4"
hyper = "1.8"
axum-server = "0.8"
rusqlite = { version = "0.38.0", features = ["bundled"] }
anyhow = "1.0.102"

[dev-dependencies]
anyhow = "1.0.102"
httpmock = "0.8.3"
tempfile = "3.26.0"
